# alphacam_primitive

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
alphacam_primitive/: __init__.py  api.py  cli.py  geometry.py  grouping.py  inout.py  measurement.py
alphacam_primitive/exporters/: dxf.py  svg.py
tests/: test_api.py  test_cli.py  test_cli_serve.py  test_exporters.py  test_geometry.py  test_grouping.py  test_inout.py  test_measurement.py
viewer/: index.html  overlays.css  overlays.js  style.css  viewer.js
viewer/tests/: manual_test.html  manual_test.js  overlays.test.js  test.html
